<resources>
    <string name="app_name">DeliveryRobot</string>
    <string name="start">出发</string>
    <string name="device_list">设备列表</string>
    <string name="add_device">添加机器</string>
    <string name="point_timeout">加载超时请检查设备是否存在或者是否标定点位</string>
    <string name="data_added_success">添加成功</string>
    <string name="data_deleted">数据已删除</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="confirm_call_point">确认呼叫机器人到该位置吗？</string>
    <string name="confirm_route_point">确认执行该路线吗？</string>
    <string name="destination_missing">缺少目的地</string>
    <string name="point_common">出发点和目的地不能相同</string>
    <string name="set">设置</string>
    <string name="language">语言设置</string>
    <string name="text_enter_device_name">请输入设备名称</string>
    <string name="received">机器收到呼叫</string>
    <string name="net_error">网络异常，请检查网络连接</string>
    <string name="max_connect_count">连接失败,到达最大次数</string>
    <string name="manual_connect">设备已离线，请尝试重新连接</string>
    <string name="reconnect">重连</string>
    <string name="net_device_list">当前网络中的机器设备</string>
    <string name="scan_qrc">二维码</string>
    <string name="device_exist">该设备已添加，请勿重复添加</string>
    <string name="device_not_selected">请选中您需要添加的设备</string>
    <string name="connect_device">连接设备中...</string>
    <string name="connect_error">连接失败，请检查机器是否在线或退出机器端应用重新进入</string>
    <string name="point_selection">点位选择重复，请重新选择</string>
    <string name="set_language">语言设置</string>
    <string name="set_robot_name">设备管理</string>
    <string name="set_number_devices">%d个设备</string>
    <string name="scan_machine_QRcode">请扫描机器的二维码添加设备</string>
    <string name="call">呼叫</string>
    <string name="delivery">配送</string>
    <string name="lift">升降</string>
    <string name="route">路线</string>
    <string name="get_call_point">正在获取呼叫点位</string>
    <string name="get_delivery_point">正在获取配送点位</string>
    <string name="get_left_point">正在获取升降点位</string>
    <string name="get_route_point">正在获取路线点位</string>
    <string name="select_location_reminder">请选择至少两个点位</string>
    <string name="manual_limit_point">手动模式点位已选择</string>
    <string name="manual_limit">手动模式</string>
    <string name="manual_mode_point">是否导航到该手动模式点位?</string>
    <string name="failed_point_location">获取点位失败</string>
    <string name="error_del">匹配数据有误，请删除此设备重新添加</string>
    <string name="qr_code_scanning">未扫描到有效数据，请重新扫描</string>
    <string name="robot_listData">机器列表为空,请先添加设备</string>
    <string name="token_check">配对码有误,请检查机器是否在线或重新添加设备</string>
    <string name="view_log_menu">查看日志</string>
    <string name="deny_permission">未取得权限,无法存储日志信息</string>
    <string name="open_log_look">开启日志查看</string>
    <string name="close_log_look">关闭日志查看</string>
    <string name="select_log_dialog">选择日志文件</string>
    <string name="not_log_dialog">没有日志文件</string>
    <string name="not_find_log_dialog">未找到 %s 的日志文件</string>
    <string name="mqtt_not_line">设备已离线，请重新连接</string>
    <string name="mqtt_not">设备已离线，无法发送指令</string>
    <string name="select_machine">选择机器</string>
    <string name="task_list">任务</string>
    <string name="auto">手动</string>
    <string name="automatic">自动</string>
    <string name="load_error">加载出错，请稍后再试</string>
    <string name="task_are_sure">确认执行该任务吗？</string>
    <string name="robot_state_stop">急停开关被按下</string>
    <string name="robot_state_charger">正在使用座充充电中</string>
    <string name="robot_state_line">正在使用线充充电中</string>
    <string name="robot_state_abutment">正在对接充电</string>
    <string name="robot_state_mapping">正在建图中</string>
    <string name="robot_state_card">正在进行顶升或对接卡板</string>
    <string name="robot_state_navigation">正在导航中</string>
    <string name="robot_state_task">正在执行任务中</string>
    <string name="robot_state_idle">空闲中</string>
    <string name="robot_call_point_null">呼叫模式点位为空，请下拉刷新</string>
    <string name="agv_jack_point_null">升降模式点位为空，请下拉刷新</string>
    <string name="forklift_auto_point_null">自动模式点位为空，请下拉刷新</string>
    <string name="agv_ordinary_point_null">普通模式点位为空，请下拉刷新</string>
    <string name="forklift_Manual_point_null">手动模式点位为空，请下拉刷新</string>
    <string name="agv_route_point_null">路线模式点位为空，请下拉刷新</string>
    <string name="forklift_task_point_null">任务模式点位为空，请下拉刷新</string>
    <string name="open_menu">打开菜单</string>
    <string name="coles_menu">关闭菜单</string>
    <string name="text_go_charge">充电</string>
    <string name="text_return_flight">返航</string>
    <string name="get_all_point">正在获取点位</string>
    <string name="mqtt_reconnect_successfully">服务器连接成功</string>
    <string name="invalid_qr_code">无效二维码</string>
</resources>