<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@drawable/set_popup_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/change_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/black"
            android:text="@string/set_language"
            android:textSize="18sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="7dp"
            android:layout_gravity="center"
            android:background="#DFE1E3"/>

        <TextView
            android:id="@+id/change_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/black"
            android:text="@string/set_robot_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_line_log"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginLeft="7dp"
            android:background="#DFE1E3"/>

        <TextView
            android:id="@+id/view_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:visibility="gone"
            android:textColor="@color/black"
            android:text="@string/view_log_menu"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_crash_log"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="7dp"
            android:visibility="gone"
            android:layout_gravity="center"
            android:background="#DFE1E3"/>

        <TextView
            android:id="@+id/crash_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:visibility="gone"
            android:textColor="@color/black"
            android:text="崩溃日志"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
