<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_edit_name">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_enter_device_name"
        android:gravity="center"
        android:textColor="#333"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/fl_dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_dialog_title"
        android:gravity="center"
        android:minHeight="80dp"
        android:padding="8dp">

        <EditText
            android:id="@+id/et_device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lineSpacingExtra="6dp"
            android:singleLine="true"
            android:textColor="#666"
            android:textSize="18sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_text_setname"
            android:ellipsize="end"
            android:gravity="center"
            android:lineSpacingExtra="6dp"
            android:singleLine="true"
            android:textColor="#666"
            android:textSize="18sp"
            android:visibility="gone" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_below="@id/fl_dialog_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:layout_gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:gravity="center"
            android:textColor="#333"
            android:textSize="18sp"
            app:autoSizeTextType="uniform"/>


        <ImageView
            android:id="@+id/bt_set_name_ok"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/dialog_vertical"
            android:padding="10dp"
            android:layout_gravity="center"
            android:scaleType="centerInside" />

        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/confirm"
            android:layout_weight="6"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textColor="#2B2B2B"
            android:textSize="18sp"
            app:autoSizeTextType="uniform"/>

    </LinearLayout>

</RelativeLayout>